@@ -3,6 +3,7 @@ package org.itsallcode.openfasttrace.core.cli;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
+import java.util.regex.Pattern;
 
 import org.itsallcode.openfasttrace.api.ColorScheme;
 import org.itsallcode.openfasttrace.api.DetailsSectionDisplay;
@@ -24,6 +25,7 @@ public class CliArguments
 {
     /** Filter in command line arguments matching items with no tags. */
     public static final String NO_TAGS_MARKER = "_";
+    private static final Pattern COMMA_SEPARATED_PATTERN = Pattern.compile(",(?U)\\s*");
     // [impl->dsn~cli.default-newline-format~1]
     private Newline newline = Newline.fromRepresentation(System.lineSeparator());
     private List<String> unnamedValues;
@@ -135,7 +137,9 @@ public class CliArguments
      */
     public void setUnnamedValues(final List<String> unnamedValues)
     {
-        this.unnamedValues = unnamedValues;
+        this.unnamedValues = unnamedValues == null
+                ? List.of()
+                : Collections.unmodifiableList(unnamedValues);
     }
 
     /**
@@ -295,7 +299,7 @@ public class CliArguments
      */
     public Set<String> getWantedArtifactTypes()
     {
-        return this.wantedArtifactTypes;
+        return Collections.unmodifiableSet(this.wantedArtifactTypes);
     }
 
     /**
@@ -309,9 +313,9 @@ public class CliArguments
         this.wantedArtifactTypes = createSetFromCommaSeparatedString(artifactTypes);
     }
 
-    private HashSet<String> createSetFromCommaSeparatedString(final String commaSeparatedString)
+    private static Set<String> createSetFromCommaSeparatedString(final String commaSeparatedString)
     {
-        return new HashSet<>(Arrays.asList(commaSeparatedString.split(",\\s*")));
+        return Set.of(COMMA_SEPARATED_PATTERN.split(commaSeparatedString));
     }
 
     /**
@@ -332,7 +336,7 @@ public class CliArguments
      */
     public Set<String> getWantedTags()
     {
-        return this.wantedTags;
+        return Collections.unmodifiableSet(this.wantedTags);
     }
 
     /**
@@ -397,7 +401,7 @@ public class CliArguments
      * 
      * @return {@code true} if origin information should be shown in reports.
      */
-    public boolean getShowOrigin()
+    public boolean isShowOrigin()
     {
         return this.showOrigin;
     }
